# campusvision

./: .gitignore  Contributing.md  LICENSE  README.md
.github/: dependabot.yml
Backend/: .dockerignore  .gitignore  Dockerfile  Procfile  requirements.txt  start.bat
Backend/attendance_backend/: .env.example  .gitignore  create_admin_key.py  db.sqlite3
Backend/attendance_backend/Admin/: face_security.py  models.py  schedule_preview.py  schedule_views.py  timetable_views.py  urls.py  user_upload_views.py  utils.py  views.py
Backend/attendance_backend/Admin/migrations/: 0001_initial.py  0002_adminaccesskey_is_default_and_more.py
Backend/attendance_backend/Admin/utils/: rust_client.py
Backend/attendance_backend/attendance/: api.py  apps.py  models.py  org_apis.py  serializers.py  urls.py  views.py
Backend/attendance_backend/attendance/migrations/: 0001_initial.py  0002_student_image.py  0003_teacher_alter_attendance_student_attendance_teacher.py  0004_qrsession.py  0005_alter_qrsession_expires_at.py  0006_qrsession_scanned_by_qrsession_used.py  0007_studenttimetable_attendance_student_timetable_and_more.py  (+26 more)
Backend/attendance_backend/attendance_backend/: settings.py  urls.py
Backend/attendance_backend/campus_vision_engine/: .gitignore  cargo.toml
Backend/attendance_backend/campus_vision_engine/intelligence_core/: Cargo.toml
Backend/attendance_backend/campus_vision_engine/intelligence_core/benches/: search.rs  simd.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/scripts/: bench_stress_runner.sh
Backend/attendance_backend/campus_vision_engine/intelligence_core/src/: embeddings.rs  lib.rs  metadata.rs  utils.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/src/scheduler/: core.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/tests/: mod.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/tests/concurrency/: concurrent_inserts.rs  mod.rs  read_write_race.rs  shard_contention.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/tests/db/: add_search.rs  mod.rs  multi_school.rs  role_filtering.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/tests/persistence/: corruption_recovery.rs  mod.rs  save_load.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/tests/property/: iou_properties.rs  mod.rs  normalization_properties.rs
Backend/attendance_backend/campus_vision_engine/intelligence_core/tests/simd/: cosine_parity.rs  mod.rs
Backend/attendance_backend/campus_vision_engine/intelligence_py/: Cargo.toml  LICENSE  pyproject.toml
Backend/attendance_backend/campus_vision_engine/intelligence_py/src/scheduler/: api.rs  core.rs
Backend/attendance_backend/campus_vision_engine/intelligence_py/src/scheduler/python/: scheduler.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/: Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
Backend/attendance_backend/campus_vision_engine/vision_engine/src/: adaptive.rs  app.rs  decision.rs  face_db.rs  main.rs  preprocessing.rs  quality.rs  scheduler.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/src/cctv/: api.rs  detector.rs  embedding_engine.rs  frame_batcher.rs  identity_resolver.rs  mod.rs  routes.rs  state.rs  track_manager.rs  tracker.rs  types.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/src/models/: mod.rs  onnx_models.rs  yunet_pool.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/src/scheduler/: routes.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/src/service/: attendance.rs  django.rs  mod.rs  security.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/src/storage/: minio_face_db.rs  mod.rs
Backend/attendance_backend/campus_vision_engine/vision_engine/src/vision/: detect.rs  index.rs  recognition.rs  routes.rs
Backend/attendance_backend/migrations/: 0002_backfill_branch.py
Backend/attendance_backend/rust_extensions/rust_backend/: Cargo.toml  LICENSE  README.md  USAGE.md  pyproject.toml
Backend/attendance_backend/rust_extensions/rust_backend/.cargo/: config.toml
Backend/attendance_backend/rust_extensions/rust_backend/src/: cctv_state.rs  cctv_tracker.rs  hnsw_helper.rs  lib.rs  preprocess.rs  utils.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/models/: mod.rs  ort_model.rs  tch_model.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/py_functions/: cctv.rs  database.rs  detection.rs  face_recognition.rs  mod.rs  scheduler.rs  utils.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/: mod.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/cctv/: logic.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/database/: logic.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/detection/: logic.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/face_recognition/: logic.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/scheduler/: logic.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/rust_only/utils/: logic.rs
Backend/attendance_backend/rust_extensions/rust_backend/src/scheduler/: scheduler.rs
Backend/attendance_backend/rust_extensions/vision_engine/: Cargo.toml
Backend/attendance_backend/rust_extensions/vision_engine/src/: app.rs  main.rs  preprocessing.rs
Backend/attendance_backend/rust_extensions/vision_engine/src/cctv/: api.rs  routes.rs  state.rs  tracker.rs
Backend/attendance_backend/rust_extensions/vision_engine/src/models/: mod.rs
Backend/attendance_backend/rust_extensions/vision_engine/src/storage/: minio_face_db.rs
Backend/attendance_backend/rust_extensions/vision_engine/src/vision/: index.rs  mod.rs  routes.rs
docker/: .env  docker-compose.yml
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/services/: api.js
mobile/: .env.example  .gitignore  package.json  pnpm-lock.yaml
(+30 files in other folders)
