[package]
name = "intelligence_core"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["rlib"]

[dependencies]
# Core utilities
anyhow = "1.0"
once_cell = "1.20"

# Data + time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Math / data
ndarray = "0.15"
rayon = "1.11"

# Vector search
hnsw_rs = "0.3"
bincode = "1.3.3"

# LRU cache for per-school embeddings
lru = "0.16.3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
