[package]
name = "intelligence_core"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
# Shared
anyhow = { workspace = true }
once_cell = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

ndarray = { workspace = true }
rayon = { workspace = true }

# Core-specific
hnsw_rs = "0.3"
bincode = "1.3.3"
lru = "0.16.3"

[dev-dependencies]
rand = "0.10.0"
tempfile = "3.27.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "search"
harness = false