[package]
name = "intelligence_py"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "intelligence_py"
crate-type = ["cdylib"]

[dependencies]
# Python binding
pyo3 = { version = "0.19.1", features = ["extension-module", "abi3"] }

# Your core logic
intelligence_core = { path = "../intelligence_core" }

# Serialization (Python <-> Rust)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

anyhow = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
