[package]
name = "intelligence_py"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[lib]
name = "intelligence_py"
crate-type = ["cdylib"]

[dependencies]
# Python binding
pyo3 = { version = "0.19.1", features = ["extension-module", "abi3"] }

# Your core logic
intelligence_core = { path = "../intelligence_core" }

# Serialization (Python <-> Rust)
serde = { workspace = true }
serde_json = { workspace = true }

# DateTime & Error handling
chrono = { workspace = true }
anyhow = { workspace = true }