[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "intelligence_py"
version = "0.1.0"
description = "Python bindings for the Intelligence Scheduler Rust library"
readme = "README.md"       # Optional
requires-python = ">=3.10"
license = { text = "Proprietary" }  # Your license metadata
authors = [
    { name="Anshu Gondi", email="agondi982@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent"
]
