[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "intelligence_py"
dynamic = ["version"]
description = "Python bindings for CampusVision face recognition engine for scheduling purposes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name="Anshu Gondi", email="agondi982@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent"
]

[tool.maturin]
bindings = "pyo3"
module-name = "intelligence_py"