[package]
name = "vision_engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# JSON + shared
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# ML + Vision
opencv = "0.96.0"
ort = "2.0.0-rc.12"

# Parallelism
rayon = { workspace = true }
once_cell = { workspace = true }
dashmap = "5"

# DateTime
chrono = { workspace = true }

# Internal logic reuse
intelligence_core = { path = "../intelligence_core" }

# ndarray
ndarray = { workspace = true }

redis = { version = "1.0.3", features = ["aio", "tokio-rustls-comp"]}
reqwest = { version = "0.12", features = ["json"] }

dotenvy = "0.15"

aws-sdk-s3 = "1"
aws-config = "1"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
num_cpus = "1.17.0"
log = "0.4.29"
