[package]
name = "vision_engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# JSON + shared
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# ML + Vision
opencv = { version = "0.96.0", default-features = false, features = [
    "calib3d",      # estimate_affine_partial_2d
    "imgcodecs",    # imdecode
    "imgproc",      # resize, warpAffine, cvtColor, Laplacian
    "objdetect",    # FaceDetectorYN (YuNet)
    "highgui",      # not needed in prod — remove if unused
] }

# ML — tract replaces ort entirely
# tract-onnx: pure Rust ONNX inference, no C++, no AVX requirement
# It uses SSE2/SSE4.1 automatically when available via runtime detection
tract-onnx = "0.21"

# Parallelism
rayon = { workspace = true }
once_cell = { workspace = true }
dashmap = "5"

# DateTime
chrono = { workspace = true }

# Internal
intelligence_core = { path = "../intelligence_core" }

# ndarray
ndarray = { workspace = true }

# Async + networking
redis = { version = "1.0.3", features = ["aio", "tokio-rustls-comp"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"

# Cloud storage
aws-sdk-s3 = "1"
aws-config = "1"

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }

# Misc
num_cpus = "1.17.0"
log = "0.4.29"
futures = "0.3.32"
core_affinity = "0.8"    # needed by InferencePool worker pinning
lru = "0.12"             # needed by intelligence_core via vision_engine