[package]
name = "rust_backend"
version = "0.1.5"
edition = "2024"

[lib]
name = "rust_backend"
crate-type = ["cdylib"]

[dependencies]
# Python binding
pyo3 = { version = "0.19.1", features = ["extension-module"] }

# Torch bindings (keep for GPU / tensor ops)
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", branch = "pytorch-2.8.0" }

# OpenCV for camera + image I/O
opencv = "0.96.0"

# ONNX runtime for model inference
onnxruntime = "0.0.14"

# Numerical & utility crates
ndarray = "0.15"
anyhow = "1.0"
once_cell = "1.20"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast ANN search for face matching
hnsw_rs = "0.3"

[profile.dev]
incremental = true

[profile.release]
incremental = true   # optional
opt-level = 3