[package]
name = "rust_backend"
version = "0.1.5"
edition = "2024"
license = "SEE LICENSE IN LICENSE"
license-file = "LICENSE"

[lib]
name = "rust_backend"
crate-type = ["cdylib"]

[dependencies]
# Python binding
pyo3 = { version = "0.19.1", features = ["extension-module", "abi3"] }

# Torch bindings (keep for GPU / tensor ops)
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", branch = "pytorch-2.8.0" }

# OpenCV for camera + image I/O
opencv = "0.96.0"

# ONNX runtime for model inference
onnxruntime = "0.0.14"

# Numerical & utility crates
ndarray = "0.15"
anyhow = "1.0"
once_cell = "1.20"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Fast ANN search for face matching
hnsw_rs = "0.3"

bincode = "1.3.3"

# Parallelism
rayon = "1.11"

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
