[package]
name = "vision_engine"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# ML + Vision
opencv = "0.96.0"
onnxruntime = "0.0.14"

# Parallelism
rayon = "1.11"
once_cell = "1.20"

# Internal logic reuse
intelligence_core = { path = "../intelligence_core" }

# ndarray
ndarray = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
